--- a/server/public/index.html
+++ b/server/public/index.html
@@ -3,176 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./stylesheets/personal.css">
-  <title>Rustem Keskin</title>
+  <title>Document</title>
 </head>
 <body>
-  <div id="next">
-    <div id="mainDiv3">
-      <div id="mainDiv2">
-        <div id="mainDiv">
-          <header id="header">
-            <div>
-              <h1>
-                <a href="/">Rustem Keskin</a>
-              </h1>
-              <h3>Freelance Developer</h3>
-              <p>I build accessible, inclusive products and digital experiences for the web.</p>
-              <nav>
-                <ul>
-                  <li class="items">
-                    <a class="sec" href="#about_section">
-                      <span class="cizgi"></span>
-                      <span class="">About</span>
-                    </a>
-                  </li>
-                  <li class="items">
-                    <a class="sec" href="#experience_section">
-                      <span class="cizgi"></span>
-                      <span>Experience</span>
-                    </a>
-                  </li>
-                  <li class="items">
-                    <a class="sec" href="#project_section">
-                      <span class="cizgi"></span>
-                      <span>Projects</span>
-                    </a>
-                  </li>
-                </ul>
-              </nav>
-            </div>
-            <ul class="links">
-              <li class="ikon">
-                <a href="https://github.com/rustemKeskin" target="_blank" rel="noreferrer">
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true">
-                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
-                  </svg>
-                </a>
-              </li>
-              <li class="ikon">
-                <a class="block hover:text-slate-200" href="https://twitter.com/rustemkeskin00" target="_blank" rel="noreferrer">
-                  <!-- <span class="sr-only">Twitter</span> -->
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 248 204" fill="currentColor" class="h-6 w-6" aria-hidden="true">
-                  <path id="white_background" d="M221.95,51.29c0.15,2.17,0.15,4.34,0.15,6.53c0,66.73-50.8,143.69-143.69,143.69v-0.04   C50.97,201.51,24.1,193.65,1,178.83c3.99,0.48,8,0.72,12.02,0.73c22.74,0.02,44.83-7.61,62.72-21.66   c-21.61-0.41-40.56-14.5-47.18-35.07c7.57,1.46,15.37,1.16,22.8-0.87C27.8,117.2,10.85,96.5,10.85,72.46c0-0.22,0-0.43,0-0.64   c7.02,3.91,14.88,6.08,22.92,6.32C11.58,63.31,4.74,33.79,18.14,10.71c25.64,31.55,63.47,50.73,104.08,52.76   c-4.07-17.54,1.49-35.92,14.61-48.25c20.34-19.12,52.33-18.14,71.45,2.19c11.31-2.23,22.15-6.38,32.07-12.26   c-3.77,11.69-11.66,21.62-22.2,27.93c10.01-1.18,19.79-3.86,29-7.95C240.37,35.29,231.83,44.14,221.95,51.29z">
-                  </path>
-                  </svg>
-                </a>
-              </li>
-              <li class="ikon">
-                <a class="block hover:text-slate-200" href="https://www.linkedin.com/in/r%C3%BCstem-keskin-8a91a8231/" target="_blank" rel="noreferrer">
-                  <!-- <span class="sr-only">LinkedIn</span> -->
-                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-                    <path d="M20.5 2h-17A1.5 1.5 0 002 3.5v17A1.5 1.5 0 003.5 22h17a1.5 1.5 0 001.5-1.5v-17A1.5 1.5 0 0020.5 2zM8 19H5v-9h3zM6.5 8.25A1.75 1.75 0 118.3 6.5a1.78 1.78 0 01-1.8 1.75zM19 19h-3v-4.74c0-1.42-.6-1.93-1.38-1.93A1.74 1.74 0 0013 14.19a.66.66 0 000 .14V19h-3v-9h2.9v1.3a3.11 3.11 0 012.7-1.4c1.55 0 3.36.86 3.36 3.66z">
-                    </path>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </header>
-          <main id="content">
-            <section id="about_section">
-              <div>
-                <h4>ABOUT</h4>
-              </div>
-              <div>
-                <p class="mb-4">Engineer by trade and currently a part time junior software developer at TCM Information and Consulting. Strong engineering fundamentals and a passion for software development. Determined to carve out a rewarding career in the tech industry.</p>
-              </div>
-            </section>
-            <section id="experience_section">
-              <div>
-                <h4>EXPERIENCE</h4>
-              </div>
-              <div>
-                <ul>
-                  <li>
-                    <div>2023 — present</div>
-                    <div>
-                      <h3>Junior Developer</h3>
-                      <p>Modifying existing software to correct errors, upgrade interfaces and improve performance.</p>
-                    </div>
-                    <div>2018 — 2022</div>
-                    <div>
-                      <h3>Construction Engineer</h3>
-                      <p class="collapsible-p">Professionally engaged in a wide array of engineering endeavors, I've played pivotal roles in construction and design projects, often as a team manager. My experience spans both engineering and managerial capacities, allowing me to confidently lead and collaborate with teams to bring projects from concept to realization. Notable highlights from my career include the successful delivery of a 4MW mini-hydropower plant and its accompanying main electricity transmission line while operating as a contractor. My portfolio showcases a multitude of other achievements in this dynamic field.</p>
-                      <p class="show-more">Show More</p>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-            </section>
-            <section id="project_section">
-              <div><h4>PROJECTS</h4></div>
-              <div>
-                <ul>
-                  <li>
-                    <a href="https://www.rustemkeskin.com/ssr/home">
-                      <img src="./images/resim.jpg" alt="" class="projectImage" >
-                      <div class="projectDiv">
-                        <h4 class="on">Eksi Clone (SSR - PostgreSQL)</h4>
-                        <p class="on">inspired by Eksisozluk.com, a popular turkish social media platform. My clone allows users to collaboratively create and edit entries, similar to an online dictionary or encyclopedia. It provides a space for users to share humorous, satirical, or informative content on various topics related to internet trends."</p>
-                      </div>
-                    </a>
-                    <h4 class="off">Eksi Clone (SSR - PostgreSQL)</h4>
-                    <p class="off">inspired by Eksisozluk.com, a popular turkish social media platform. My clone allows users to collaboratively create and edit entries, similar to an online dictionary or encyclopedia. It provides a space for users to share humorous, satirical, or informative content on various topics related to internet trends."</p>
-                  </li>
-                  <li>
-                    <a href="https://www.rustemkeskin.com/first_project">
-                      <img src="./images/resim.jpg" alt="" class="projectImage">
-                      <div class="projectDiv">
-                        <h4 class="on">Eksi Clone (React - Mongo)</h4>
-                        <p class="on">inspired by Eksisozluk.com, a popular turkish social media platform. My clone allows users to collaboratively create and edit entries, similar to an online dictionary or encyclopedia. It provides a space for users to share humorous, satirical, or informative content on various topics related to internet trends."</p>
-                      </div>
-                    </a>
-                    <h4 class="off">Eksi Clone (React - Mongo)</h4>
-                    <p class="off">inspired by Eksisozluk.com, a popular turkish social media platform. My clone allows users to collaboratively create and edit entries, similar to an online dictionary or encyclopedia. It provides a space for users to share humorous, satirical, or informative content on various topics related to internet trends."</p>
-                  </li>
-                </ul>
-              </div>
-            </section>
-          </main>
-          <div></div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <script>
-
-    const showMoreLink = document.querySelector('.show-more');
-    const collapsibleP = document.querySelector('.collapsible-p');
-
-    let expanded = false;
-
-    showMoreLink.addEventListener('click', function() {
-      if (expanded) {
-        collapsibleP.style.maxHeight = '3em'; // Display only 3 lines
-        showMoreLink.textContent = 'Show More';
-      } else {
-        collapsibleP.style.maxHeight = collapsibleP.scrollHeight + 'px'; // Show all lines
-        showMoreLink.textContent = 'Show Less';
-      }
-      expanded = !expanded;
-    });
-
-    if (collapsibleP.scrollHeight > collapsibleP.clientHeight) {  showMoreLink.style.display = 'block';  }
-
-    let arr = document.querySelectorAll('.cizgi');
-    function sifirla() {
-      arr.forEach(el => {
-        el.style.width = '50px';
-        el.addEventListener('click', () => {})
-      });
-    }
-
-    sifirla();
-
-    document.querySelectorAll('.items').forEach((el,index) => {
-      el.addEventListener('click', () => {
-        sifirla();
-        arr[index].style.width = '100px';
-      })
-    })
-
-  </script>
+  
 </body>
 </html>
-
